tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `False: bitfield::DiscriminantInRange` is not satisfied
 --> tests/09-variant-out-of-range.rs:8:10
  |
8 | #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^ the trait `bitfield::DiscriminantInRange` is not implemented for `False`
  |
  = help: the trait `bitfield::DiscriminantInRange` is implemented for `True`
  = note: this error originates in the derive macro `BitfieldSpecifier` (in Nightly builds, run with -Z macro-backtrace for more info)
